add basic DMA registers and logic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(frog
         main.cpp
         system.cpp
         cpu.cpp
-        bus.cpp)
+        bus.cpp
+        dma.cpp)
 
 target_include_directories(frog PUBLIC .)
