--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,7 @@ message("CXX release flags: ${CMAKE_CXX_FLAGS_RELEASE}")
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 
+add_library(fmt STATIC libs/fmt/src/format.cc)
+target_include_directories(fmt PUBLIC libs/fmt)
+
 add_subdirectory(src)
