gpu: basic renderer

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(core
         cpu_disasm.cpp
         bus.cpp
         dma.cpp
-        gpu.cpp)
+        gpu.cpp
+        renderer.cpp)
 
-target_include_directories(core PUBLIC .)
-target_link_libraries(core PRIVATE fmt)
+target_include_directories(core PUBLIC ../../libs/gl3w)
+target_link_libraries(core PRIVATE fmt gl3w)
