system: add ability to trace BIOS function calls

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(core
         bus.cpp
         dma.cpp
         gpu.cpp
-        sw_renderer.cpp)
+        sw_renderer.cpp
+        bios.h)
 
 target_link_libraries(core PRIVATE fmt)
