imgui: add basic debug windows

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -8,4 +8,5 @@ add_library(core
         sw_renderer.cpp
         bios.cpp)
 
-target_link_libraries(core PRIVATE fmt)
+target_include_directories(core PUBLIC ../../libs/imgui)
+target_link_libraries(core PRIVATE fmt imgui)
