--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(imgui STATIC
         imgui/imgui_draw.cpp
         imgui/imgui_impl_opengl3.cpp
         imgui/imgui_impl_sdl.cpp
-        imgui/imgui_widgets.cpp)
+        imgui/imgui_widgets.cpp
+        imgui/imgui_memory_editor.h)
 target_include_directories(imgui PUBLIC imgui gl3w ${SDL2_INCLUDE_DIRS})
 target_link_libraries(imgui PRIVATE gl3w ${SDL2_LIBRARIES})
