--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,25 +7,25 @@ on:
     branches: [ master ]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: install dependencies
-      run: sudo apt-get install libsdl2-dev
-    - name: compile debug build
-      run: |
-        mkdir build-debug
-        cd build-debug
-        cmake -DCMAKE_BUILD_TYPE=Debug ..
-        cmake --build .
-    - name: compile release build
-      run: |
-        mkdir build-release
-        cd build-release
-        cmake -DCMAKE_BUILD_TYPE=Release ..
-        cmake --build .
+  #build-linux:
+    #runs-on: ubuntu-latest
+    #
+    #steps:
+    #- uses: actions/checkout@v2
+    #- name: install dependencies
+    #  run: sudo apt-get install libsdl2-dev
+    #- name: compile debug build
+    #  run: |
+    #    mkdir build-debug
+    #    cd build-debug
+    #    cmake -DCMAKE_BUILD_TYPE=Debug ..
+    #    cmake --build .
+    #- name: compile release build
+    #  run: |
+    #    mkdir build-release
+    #    cd build-release
+    #    cmake -DCMAKE_BUILD_TYPE=Release ..
+    #    cmake --build .
     #- name: test
     #  run: cd build && ctest
 
@@ -35,9 +35,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: compile release build
+      shell: cmd
       run: |
         mkdir build-release
         cd build-release
-        cmd.exe \c 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat' x86_amd64
-        cmake -G "Ninja" -DCMAKE_BUILD_TYPE=Release ..
-        cmake --build .
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
