--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,25 +7,25 @@ on:
     branches: [ master ]
 
 jobs:
-  #build-linux:
-    #runs-on: ubuntu-latest
-    #
-    #steps:
-    #- uses: actions/checkout@v2
-    #- name: install dependencies
-    #  run: sudo apt-get install libsdl2-dev
-    #- name: compile debug build
-    #  run: |
-    #    mkdir build-debug
-    #    cd build-debug
-    #    cmake -DCMAKE_BUILD_TYPE=Debug ..
-    #    cmake --build .
-    #- name: compile release build
-    #  run: |
-    #    mkdir build-release
-    #    cd build-release
-    #    cmake -DCMAKE_BUILD_TYPE=Release ..
-    #    cmake --build .
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: install dependencies
+      run: sudo apt-get install libsdl2-dev
+    - name: compile debug build
+      run: |
+        mkdir build-debug
+        cd build-debug
+        cmake -DCMAKE_BUILD_TYPE=Debug ..
+        cmake --build .
+    - name: compile release build
+      run: |
+        mkdir build-release
+        cd build-release
+        cmake -DCMAKE_BUILD_TYPE=Release ..
+        cmake --build .
     #- name: test
     #  run: cd build && ctest
 
