--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(FrogStation)
+project(PainStation)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/.cmake-modules/")
 
