linux: add --end-group to linker flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if (APPLE)
     message(FATAL_ERROR "macOS build not yet supported")
     #set(LIBS "-lc++abi -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
 elseif(UNIX AND NOT APPLE)
-    set(LIBS "-Wl,--start-group -lGL -ldl")
+    set(LIBS "-Wl,--start-group -lGL -ldl -Wl,--end-group")
 elseif(WIN32)
 	set(LIBS "opengl32.lib")
 else()
