--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install dependencies
-      run: sudo apt-get install libsdl2-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsdl2-dev
     - name: compile debug build
       run: |
         mkdir build-debug
