ci: hopefully fix linker problems in gcc 7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,12 @@ if (APPLE)
     message(FATAL_ERROR "macOS build not yet supported")
     #set(LIBS "-lc++abi -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
 elseif(UNIX AND NOT APPLE)
-    set(LIBS "-Wl,--start-group -lGL -ldl -Wl,--end-group")
+    # use groups for older gcc versions
+    if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+        set(LIBS "-Wl,--start-group -lGL -ldl")
+    else()
+        set(LIBS "-lGL -ldl")
+    endif()
 elseif(WIN32)
 	set(LIBS "opengl32.lib")
 else()
