debug: start of imgui debugger

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(core
         gpu.cpp
         sw_renderer.cpp
         bios.cpp
-        interrupt.cpp)
+        interrupt.cpp
+        debugger.cpp)
 
 target_include_directories(core PUBLIC ../../libs/nanolog)
 target_link_libraries(core PRIVATE fmt nanolog imgui)
