misc: change project name and log level order

--- a/src/frontend-sdl/CMakeLists.txt
+++ b/src/frontend-sdl/CMakeLists.txt
@@ -1,14 +1,14 @@
-add_executable(pain
+add_executable(frustration
         main.cpp
         display.cpp)
 
-target_include_directories(pain PUBLIC ../core ../../libs/gl3w ../../libs/imgui ${SDL2_INCLUDE_DIRS})
-target_link_libraries(pain PRIVATE core gl3w imgui ${SDL2_LIBRARIES})
+target_include_directories(frustration PUBLIC ../core ../../libs/gl3w ../../libs/imgui ${SDL2_INCLUDE_DIRS})
+target_link_libraries(frustration PRIVATE core gl3w imgui ${SDL2_LIBRARIES})
 
 if (WIN32)
-    target_link_libraries(pain PRIVATE ${SDL2MAIN_LIBRARIES})
+    target_link_libraries(frustration PRIVATE ${SDL2MAIN_LIBRARIES})
 
-    set_target_properties(pain PROPERTIES
+    set_target_properties(frustration PROPERTIES
         # leave a debug console open until we do proper logging
         #WIN32_EXECUTABLE TRUE
         DEBUG_POSTFIX "-debug")
