system: add step functions for components, more timer logic and cdrom stub

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(core
         bus.cpp
         dma.cpp
         gpu.cpp
+        cdrom.cpp
         sw_renderer.cpp
         bios.cpp
         interrupt.cpp
