--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,6 +1,34 @@
 add_library(fmt STATIC fmt/src/format.cc fmt/src/os.cc)
 target_include_directories(fmt PUBLIC fmt/include)
 
+# use cmake for nativefiledialog
+set(NFD_SOURCES nativefiledialog/src/nfd_common.c)
+if (WIN32)
+    list(APPEND NFD_SOURCES nativefiledialog/src/nfd_win.cpp)
+    list(APPEND NFD_DEFS UNICODE _UNICODE)
+elseif (APPLE)
+    list(APPEND NFD_SOURCES nativefiledialog/src/nfd_cocoa.m)
+elseif (UNIX AND NOT APPLE AND NOT ANDROID)
+    list(APPEND NFD_SOURCES nativefiledialog/src/nfd_gtk.c)
+else()
+    message(FATAL_ERROR "Unsupported system")
+endif()
+add_library(nativefiledialog STATIC ${NFD_SOURCES})
+target_include_directories(nativefiledialog PUBLIC nativefiledialog/src/include)
+target_compile_definitions(nativefiledialog PUBLIC ${NFD_DEFS})
+if(UNIX AND NOT APPLE AND NOT ANDROID)
+    find_package(PkgConfig)
+    if (PKG_CONFIG_FOUND)
+        pkg_check_modules(GTK "gtk+-3.0")
+        if (GTK_FOUND)
+            target_link_libraries(nativefiledialog ${GTK_LIBRARIES})
+            add_definitions(${GTK_CFLAGS} ${GTK_CFLAGS_OTHER})
+        else()
+            message(FATAL_ERROR "Could not find GTK3 libraries")
+        endif()
+    endif()
+endif()
+
 add_library(nanolog STATIC nanolog/nano_log.cpp)
 
 add_definitions(-DIMGUI_IMPL_OPENGL_LOADER_GL3W)
