--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install libsdl2-dev
+        sudo apt-get install libgtk-3-dev
     - name: compile debug build
       run: |
         mkdir build-debug
@@ -36,6 +39,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: compile release build
       shell: cmd
       run: |
