--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,7 +10,8 @@ add_library(core
         bios.cpp
         interrupt.cpp
         timer.cpp
-        debugger.cpp)
+        debugger.cpp
+        gdb_stub.cpp)
 
 target_include_directories(core PUBLIC ../../libs/nanolog)
 target_link_libraries(core PRIVATE fmt nanolog imgui)
