debug: make gdb_stub work on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ elseif(UNIX AND NOT APPLE)
         set(LIBS "-lGL -ldl")
     endif()
 elseif(WIN32)
-	set(LIBS "opengl32.lib")
+	set(LIBS "opengl32.lib ws2_32.lib")
 else()
     message(FATAL_ERROR "Unsupported platform")
 endif ()
