--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Automatic Builds
 
 on:
   push:
@@ -14,25 +14,21 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: install dependencies
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libsdl2-dev
-        sudo apt-get install libgtk-3-dev
-    - name: compile debug build
-      run: |
-        mkdir build-debug
-        cd build-debug
-        cmake -DCMAKE_BUILD_TYPE=Debug ..
-        cmake --build .
-    - name: compile release build
+        sudo apt-get install libsdl2-dev libgtk-3-dev
+    - name: Compile release build
       run: |
         mkdir build-release
         cd build-release
         cmake -DCMAKE_BUILD_TYPE=Release ..
         cmake --build .
-    #- name: test
-    #  run: cd build && ctest
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: frustration-linux
+        path: bin/frustration
 
   build-windows:
     runs-on: windows-latest
@@ -41,7 +37,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: compile release build
+    - name: Compile release build
       shell: cmd
       run: |
         mkdir build-release
@@ -49,3 +45,28 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
+
+  update-release:
+    runs-on: ubuntu-latest
+    needs: [build-linux]
+
+    steps:
+      - name: Delete old release
+        uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          delete_release: true
+          tag_name: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get artifacts
+        uses: actions/download-artifact@v2
+      - name: Package artifacts
+        run: for i in ./*; do zip -r -j ${i}.zip $i; done
+      - name: Create new release
+        uses: ncipollo/release-action@v1
+        with:
+          name: Rolling Release
+          body: Automatic builds of the latest master commit
+          artifacts: "*.zip"
+          tag: release
+          token: ${{ secrets.GITHUB_TOKEN }}
