--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,18 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: frustration-windows
+        path: |
+          bin/frustration.exe
+          libs/windows/sdl2/lib/SDL2.lib
+          libs/windows/sdl2/lib/SDL2main.lib
 
   update-release:
     runs-on: ubuntu-latest
-    needs: [build-linux]
+    needs: [build-linux, build-windows]
 
     steps:
       - name: Delete old release
