system: new timing logic and massive refactor

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(core
+        emulator.cpp
         system.cpp
-        cpu.cpp
-        cpu_disasm.cpp
+        cpu/cpu.cpp
+        cpu/cpu_disasm.cpp
         bus.cpp
         dma.cpp
         gpu.cpp
@@ -9,10 +10,9 @@ add_library(core
         sw_renderer.cpp
         bios.cpp
         interrupt.cpp
-        timer.cpp
-        scheduler.cpp
-        debugger.cpp
-        gdb_stub.cpp)
+        timer/timer.cpp
+        debugger/debugger.cpp
+        debugger/gdb_stub.cpp)
 
-target_include_directories(core PUBLIC ../../libs/nanolog)
+target_include_directories(core PUBLIC . cpu debugger timer util ../../libs/nanolog)
 target_link_libraries(core PRIVATE fmt nanolog imgui)
