system: start work on GTE and stub some more draw commands

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(core
         system.cpp
         cpu/cpu.cpp
         cpu/cpu_disasm.cpp
+        cpu/gte.cpp
         bus.cpp
         dma.cpp
         gpu.cpp
