--- a/src/frontend-sdl/CMakeLists.txt
+++ b/src/frontend-sdl/CMakeLists.txt
@@ -2,8 +2,8 @@ add_executable(frustration
         main.cpp
         display.cpp)
 
-target_include_directories(frustration PUBLIC ../core ../../libs/gl3w ../../libs/imgui ../../libs/nativefiledialog/src/include ${SDL2_INCLUDE_DIRS})
-target_link_libraries(frustration PRIVATE core gl3w imgui nativefiledialog ${SDL2_LIBRARIES})
+target_include_directories(frustration PUBLIC ../common ../core ../../libs/gl3w ../../libs/imgui ../../libs/nativefiledialog/src/include ${SDL2_INCLUDE_DIRS})
+target_link_libraries(frustration PRIVATE common core gl3w imgui nativefiledialog ${SDL2_LIBRARIES})
 
 if (WIN32)
     target_link_libraries(frustration PRIVATE ${SDL2MAIN_LIBRARIES})
