--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(common
+add_library(common STATIC
         log.cpp)
 
-target_include_directories(common PUBLIC . "${PROJECT_SOURCE_DIR}/libs/spdlog/include")
-target_link_libraries(common PUBLIC spdlog)
+target_include_directories(common PUBLIC "${PROJECT_SOURCE_DIR}/libs/spdlog/include")
+target_link_libraries(common PRIVATE spdlog)
