--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -28,32 +28,33 @@ jobs:
         name: frustration-linux
         path: bin/frustration
 
-  build-windows:
-    runs-on: windows-2019
-    
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-    - name: Compile release build
-      shell: cmd
-      run: |
-        mkdir build-release
-        cd build-release
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: frustration-windows
-        path: |
-          bin/frustration.exe
-          libs/windows/sdl2/bin/SDL2.dll
+  #build-windows:
+  #  runs-on: windows-2019
+  #
+  #  steps:
+  #  - uses: actions/checkout@v2
+  #    with:
+  #      submodules: recursive
+  #  - name: Compile release build
+  #    shell: cmd
+  #    run: |
+  #      mkdir build-release
+  #      cd build-release
+  #      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
+  #      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
+  #      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
+  #  - name: Upload artifacts
+  #    uses: actions/upload-artifact@v2
+  #    with:
+  #      name: frustration-windows
+  #      path: |
+  #        bin/frustration.exe
+  #        libs/windows/sdl2/bin/SDL2.dll
 
   update-release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-windows]
+    needs: [build-linux]
+    #needs: [build-linux, build-windows]
 
     steps:
       - name: Delete old release
