--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 # build folders
 cmake-build-debug
 cmake-build-release
-build-debug
-build-release
-
-# output folders
-/bin
+cmake-build-relwithdebinfo
 
 # IDEs
 .idea
