cmake: fix wrong target_link_libraries type
Common library linked spdlog as PRIVATE even though it propagated the dependency through the log header file. This caused an ugly spdlog bug that messed with the log headers and the stdout sink.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(common STATIC
         log.cpp)
 
 target_include_directories(common PUBLIC "${PROJECT_SOURCE_DIR}/libs/spdlog/include")
-target_link_libraries(common PRIVATE spdlog)
+target_link_libraries(common PUBLIC spdlog)
