--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: recursive
     - name: Install dependencies
@@ -23,16 +23,16 @@ jobs:
         cmake -DCMAKE_BUILD_TYPE=Release ..
         cmake --build .
     - name: Upload artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: frustration-linux
-        path: bin/frustration
+        path: build-release/frustration
 
   #build-windows:
   #  runs-on: windows-2019
   #
   #  steps:
-  #  - uses: actions/checkout@v2
+  #  - uses: actions/checkout@v3
   #    with:
   #      submodules: recursive
   #  - name: Compile release build
@@ -44,11 +44,11 @@ jobs:
   #      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G "Ninja" -DCMAKE_C_COMPILER=cl -DCMAKE_C_COMPILER_FORCED=ON -DCMAKE_CXX_COMPILER=cl -DCMAKE_CXX_COMPILER_FORCED=ON -DCMAKE_BUILD_TYPE=Release ..
   #      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" --build .
   #  - name: Upload artifacts
-  #    uses: actions/upload-artifact@v2
+  #    uses: actions/upload-artifact@v3
   #    with:
   #      name: frustration-windows
   #      path: |
-  #        bin/frustration.exe
+  #        build-release/frustration.exe
   #        libs/windows/sdl2/bin/SDL2.dll
 
   update-release:
@@ -65,7 +65,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
       - name: Package artifacts
         run: for i in ./*; do zip -r -j ${i}.zip $i; done
       - name: Create new release
