ci: improve usability of release artifact

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -26,7 +26,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: frustration-linux
-        path: build-release/frustration
+        path: |
+          build-release/frustration
+          imgui.ini
 
   #build-windows:
   #  runs-on: windows-2019
