--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install libsdl2-dev libgtk-3-dev
+    - name: Install dependencies (cached)
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: libsdl2-dev libgtk-3-dev
     - name: Compile release build
       run: |
         mkdir build-release
