cmake: add nativefiledialog as a normal bundled static library

--- a/src/frontend-sdl/CMakeLists.txt
+++ b/src/frontend-sdl/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(frustration
         main.cpp
         display.cpp)
 
-target_link_libraries(frustration PRIVATE common core gl3w imgui nativefiledialog ${SDL2_LIBRARIES})
+target_link_libraries(frustration PRIVATE common core gl3w imgui nfd ${SDL2_LIBRARIES})
 
 if (WIN32)
     target_link_libraries(frustration PRIVATE ${SDL2MAIN_LIBRARIES})
