--- a/libs/gl3w/CMakeLists.txt
+++ b/libs/gl3w/CMakeLists.txt
@@ -4,5 +4,5 @@ add_library(gl3w STATIC
         include/KHR/khrplatform.h
         src/GL/gl3w.c)
 
-target_include_directories(gl3w PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/src")
-target_include_directories(gl3w INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(gl3w PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(gl3w INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
