--- a/libs/imgui/CMakeLists.txt
+++ b/libs/imgui/CMakeLists.txt
@@ -16,6 +16,6 @@ add_library(imgui STATIC
         src/imgui_widgets.cpp)
 
 target_compile_definitions(imgui PRIVATE -DIMGUI_IMPL_OPENGL_LOADER_GL3W)
-target_include_directories(imgui PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/src")
-target_include_directories(imgui INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(imgui PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(imgui INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(imgui PRIVATE gl3w ${SDL2_LIBRARIES})
