--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install dependencies (cached)
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: libsdl2-dev libgtk-3-dev
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsdl2-dev libgtk-3-dev
     - name: Compile ${{ matrix.build_type }} build
       run: |
         mkdir build
