renderer opengl: start work on opengl renderer implementation

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(core STATIC
         cpu/gte.cpp
         renderer/renderer.h
         renderer/renderer_sw.cpp
+        renderer/renderer_opengl.cpp
+        renderer/opengl_helper.cpp
         timer/timers.cpp
         timer/timer.cpp
         timer/timer_blank.cpp
@@ -20,6 +22,6 @@ add_library(core STATIC
         debugger/gdb_stub.cpp)
 
 target_include_directories(core PUBLIC .)
-target_link_libraries(core PRIVATE common imgui)
+target_link_libraries(core PRIVATE common imgui gl3w)
 
 define_file_basename_for_sources(core)
