misc: make NFD (and its GTK dependency) optional

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,5 +1,8 @@
-add_subdirectory(nfd)
 add_subdirectory(spdlog)
 add_subdirectory(simpleini)
 add_subdirectory(gl3w)
 add_subdirectory(imgui)
+
+if (USE_NATIVE_FILE_PICKER)
+    add_subdirectory(nfd)
+endif()
