--- a/src/frontend-sdl/CMakeLists.txt
+++ b/src/frontend-sdl/CMakeLists.txt
@@ -3,7 +3,12 @@ add_executable(frustration
         display.cpp)
 
 target_include_directories(frustration PRIVATE ${SDL2_INCLUDE_DIRS})
-target_link_libraries(frustration PRIVATE common core gl3w imgui nfd ${SDL2_LIBRARIES})
+target_link_libraries(frustration PRIVATE common core gl3w imgui ${SDL2_LIBRARIES})
+
+if (USE_NATIVE_FILE_PICKER)
+    target_link_libraries(frustration PRIVATE nfd)
+    target_compile_definitions(frustration PRIVATE USE_NFD)
+endif()
 
 if (WIN32)
     target_link_libraries(frustration PRIVATE ${SDL2MAIN_LIBRARIES})
